the routes are now protected
