# swagger-output.json
@@ -5,16 +5,22 @@
     "description": "API that handles a database of players",
     "version": "1.0.0"
   },
-  "host": "localhost:3000",
+  "host": "nba-sa92.onrender.com",
   "basePath": "/",
-  "schemes": ["http"],
+  "schemes": [
+    "https"
+  ],
   "paths": {
     "/nba_players/": {
       "get": {
-        "tags": ["NBA Players"],
+        "tags": [
+          "NBA Players"
+        ],
         "summary": "Get all of the players in the database",
         "description": "Endpoint to get all of the players in the database",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -28,7 +34,9 @@
         }
       },
       "post": {
-        "tags": ["NBA Players"],
+        "tags": [
+          "NBA Players"
+        ],
         "summary": "Create a new player",
         "description": "Endpoint to create a new player",
         "parameters": [
@@ -67,6 +75,9 @@
           "201": {
             "description": "Created"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "412": {
             "description": "Precondition Failed"
           },
@@ -78,10 +89,14 @@
     },
     "/nba_players/{id}": {
       "get": {
-        "tags": ["NBA Players"],
+        "tags": [
+          "NBA Players"
+        ],
         "summary": "Get a single player from the database",
         "description": "Endpoint to get a single contact from the database",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -96,11 +111,16 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       },
       "put": {
-        "tags": ["NBA Players"],
+        "tags": [
+          "NBA Players"
+        ],
         "summary": "Modify a player",
         "description": "Endpoint to get a single player from the database and modify it",
         "parameters": [
@@ -148,6 +168,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "412": {
             "description": "Precondition Failed"
           },
@@ -157,7 +180,9 @@
         }
       },
       "delete": {
-        "tags": ["NBA Players"],
+        "tags": [
+          "NBA Players"
+        ],
         "summary": "Delete a player from the database",
         "description": "Endpoint to delete a player from the database",
         "parameters": [
@@ -175,6 +200,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -183,7 +211,9 @@
     },
     "/nba_players/user": {
       "post": {
-        "tags": ["NBA Players"],
+        "tags": [
+          "NBA Players"
+        ],
         "summary": "Create a new user",
         "description": "Endpoint to create a new user",
         "parameters": [
@@ -204,6 +234,9 @@
           }
         ],
         "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
           "412": {
             "description": "Precondition Failed"
           },
@@ -288,6 +321,26 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/auth/google": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/google/nba": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
